# falkor_quadrotor

./: .gitignore  stack.xml
falkor_bringup/: mainpage.dox  manifest.xml
falkor_bringup/launch/: robot.launch  robot_intel.launch
falkor_bringup/upstart/: install.bash  robot-start  robot-stop  robot.conf
falkor_drivers/: CMakeLists.txt  mainpage.dox  manifest.xml
falkor_drivers/include/falkor_drivers/: i2c.h  i2c_ros_driver.h  pwm_beagle.h  pwm_input.h  pwm_pololu.h  pwm_switch.h  sensor.h
falkor_drivers/launch/: magnetometer_calibrate.launch  pwm_calibrate.launch  robot.launch  robot_drivers.launch  test_pwm.launch
falkor_drivers/nodes/: i2c_driver.py  i2c_sensors.py  i2c_test.py  magnetometer_calibrator.py  mb1200_beagle_driver.py  pwm_beagle_driver.py  pwm_calibrator.py  pwm_input_driver.py  pwm_io_driver.py  pwm_pololu_driver.py  pwm_switch.py  razor_driver.py
falkor_drivers/src/: i2c.cpp  i2c_ros_driver.cpp  i2c_test.cpp  pwm_beagle.cpp  pwm_input.cpp  pwm_io_node.cpp  pwm_pololu.cpp  pwm_switch.cpp  pwm_switch_node.cpp  sensor.cpp  sensor.h
falkor_filters/: mainpage.dox  manifest.xml
falkor_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml
falkor_quadrotor_control/: mainpage.dox  manifest.xml
falkor_quadrotor_filter/: mainpage.dox  manifest.xml
falkor_quadrotor_gazebo/: mainpage.dox  manifest.xml
falkor_quadrotor_navigate/: mainpage.dox  manifest.xml
falkor_quadrotor_sensors/: CMakeLists.txt  mainpage.dox  manifest.xml
falkor_quadrotor_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
falkor_quadrotor_urdf/: mainpage.dox  manifest.xml
(+59 files in other folders)
